Finished 3rd tutorial, focusing on HTML Forms, changed titles in previous folders

--- a/tutorial 1/index.html
+++ b/tutorial 1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Learning HTML</title>
+	<title>Learning HTML 1</title>
 </head>
 <body>
 	<p>Hello, welcome to the ninja world!</p>
